temporary fix of a bug to allow people to upload their resumes by making the first li invisible nad putting a 2nd visible li

--- a/occuhunt/static/occuhunt/css/profile.css
+++ b/occuhunt/static/occuhunt/css/profile.css
@@ -16,6 +16,14 @@
 	list-style-type: none;
 }
 
+.add-document {
+	width: 108px;
+	height: 168px;
+	display: inline-block;
+	position: absolute;
+	z-index: 9999;
+}
+
 .actions {
 	display: block;
 	float: left;
